sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:32: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
while(inverse1==true || inverse2=true)
                     ^